# return_adapters

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: clangformat.cmake
cmake/thirdparties/: callabletraits.cmake  catch2.cmake  fmt.cmake  typestring.cmake
examples/: CMakeLists.txt  safe_com.cpp  safe_crt.cpp
inc/return_adapters/: exception_adapter.h  non_throwing_adapter.h  out_retval_adapter.h  predicates.h  raii_adapter.h  retval_adapter.h  throwing_adapter.h  tuple_utils.h
inc/return_adapters/impl/: com_adapters.h  safe_com.h  safe_crt.h
tests/: CMakeLists.txt  catch2.cmake  com_adapters.cpp  exception_adapter.cpp  non_throwing_adapter.cpp  out_retval_adapter.cpp  raii_adapter.cpp  retval_adapter.cpp  safe_com.cpp  safe_crt.cpp  test_utils.cpp  test_utils.h  throwing_adapter.cpp
